<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >

    <ImageButton
        android:id="@+id/back"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="57dp"
        android:src="@drawable/icon_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:orientation="vertical">

        <TextView
            style="@style/Theme.EventPlaza.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/term_email_pwd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="244dp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_email"
            />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:drawableEnd="@drawable/icon_mail"
            android:labelFor="@id/label_email"
            android:theme="@style/Theme.EventPlaza.EditText"
            android:minHeight="48dp" />
        <TextView
            android:id="@+id/label_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_pwd"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/pwd"
            android:inputType="textPassword"
            android:labelFor="@id/label_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:drawableEnd="@drawable/icon_pwd"
            android:theme="@style/Theme.EventPlaza.EditText"
            android:minHeight="48dp" />
        <TextView
            android:layout_gravity="right"
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password ?"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="158dp"
        android:text="@string/term_privacy"
        android:theme="@style/Theme.EventPlaza.Terms" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_primary"
        android:text="@string/btn_sign_in"
        android:theme="@style/Button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="73dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_no_account" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_sign_up"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>


</RelativeLayout>